# spotify-notifications-steam

./: .gitignore  LICENSE  README.md  SPOTIFY_SETUP.md  deploy-dev.ps1  deploy-prod.ps1  package.json  plugin.json
.github/: FUNDING.yml
.github/workflows/: release.yml
backend/: .env.template  build_rust_daemon.ps1  launch_daemon.vbs  main.lua  main.py  media_daemon.ps1  requirements.txt
backend/MediaDaemon/: MediaDaemon.csproj  Program.cs
backend/mediadaemon-rust/: Cargo.toml
backend/mediadaemon-rust/src/: http.rs  logs.rs  main.rs  state.rs
backend/mediadaemon-rust/src/media/: mod.rs  windows.rs
frontend/: index.tsx
frontend/src/components/: NativeSettingsPanel.tsx  SpotifyMiniPlayer.tsx
frontend/src/constants/: keys.ts
frontend/src/hooks/: nativeHooks.ts
frontend/src/services/: monitoring.ts  notifications.tsx  state.ts
frontend/src/utils/: helpers.ts  localization.ts  logger.ts
