[package]
name = "mediadaemon"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
